service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatpdf-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 8501
    targetPort: 8501 
  selector:
    app: chatpdf-app
